# pyrami

./: .gitignore  Dockerfile  Taskfile.yaml  entrypoint.sh  main.py  pyproject.toml
common/: collections.py  kinesis.py  metrics.py  test_kinesis.py  util.py
kinesis_to_kafka/: __init__.py
twitter_stream/: __init__.py  test_twitter.py  twitter.py
